--- a/A00309828.md
+++ b/A00309828.md
@@ -1,6 +1,6 @@
 Emmanuel Bolaños Ocampo, A00309828
 
-Seleccione 5 retos de la página https://cmdchallenge.com y presente la solución a cada uno de ellos a través de un ejemplo práctico en CentOS7. Presente capturas de pantalla relevantes como evidencias de lo realizado.
+***Seleccione 5 retos de la página https://cmdchallenge.com y presente la solución a cada uno de ellos a través de un ejemplo práctico en CentOS7. Presente capturas de pantalla relevantes como evidencias de lo realizado.
 
 Reto 1) Imprimir en la consola.
 
@@ -23,13 +23,26 @@ Reto 5) Imprimir las últimas  líneas del archivo.
 ![image](https://cloud.githubusercontent.com/assets/17281732/23809472/d769d0be-059b-11e7-8bb8-99ad32e4e04f.png)
 ![image](https://cloud.githubusercontent.com/assets/17281732/23809484/e16b67c6-059b-11e7-8e75-3067d5dc3475.png)
  
-Realice un script que a partir de un listado con no menos de dos direcciones ip, descargue en forma remota un libro del
+***Realice un script que a partir de un listado con no menos de dos direcciones ip, descargue en forma remota un libro del
 proyecto https://www.gutenberg.org/ en el directorio /tmp de cada equipo. El usuario operativos con contraseñas operativos debe existir en las equipos. Presente capturas de pantalla relevantes como evidencias del funcionamiento.
 
 ![image](https://cloud.githubusercontent.com/assets/17281732/23810103/31381a4a-059e-11e7-93dc-4f10edd39710.png)
 
+Captura asociada a la descarga de los libros remotamente mediante la ejecución del script
 
-Cree un contenedor de debían en CentOS7 empleando LXC. Presente el listado de los comandos empleados y capturas de pantalla relevantes como evidencias del funcionamiento.
+![4](https://cloud.githubusercontent.com/assets/17281732/23817090/985ef994-05be-11e7-9ded-54684f7c84f4.jpg)
+ 
+Captura asociada donde se puede comprobar la descarga del libro
+
+![3](https://cloud.githubusercontent.com/assets/17281732/23817105/a9e8e724-05be-11e7-8606-4d68a52df902.jpg)
+
+Capturas asociadas al contenido del libro descargado.
+
+![1](https://cloud.githubusercontent.com/assets/17281732/23817119/bfaadf40-05be-11e7-9410-38e82f3c457c.jpg)
+![2](https://cloud.githubusercontent.com/assets/17281732/23817128/ca43cb60-05be-11e7-8957-4c2aa4f8a450.jpg)
+  
+
+***Cree un contenedor de debían en CentOS7 empleando LXC. Presente el listado de los comandos empleados y capturas de pantalla relevantes como evidencias del funcionamiento.
 
 Captura asociada a la descarga de las dependencias necesarias y la comprobación del estado requerido-> activo.
 
@@ -47,6 +60,6 @@ Captura asociada a la activación del contenedor debían, me faltó tomarle capt
 
 ![image](https://cloud.githubusercontent.com/assets/17281732/23810403/87c21266-059f-11e7-8ee6-d7b625085466.png)
 
-Bibliografía. https://cmdchallenge.com/#/last_lines
+***Bibliografía. https://cmdchallenge.com/#/last_lines
 http://www.tecmint.com/install-create-run-lxc-linux-containers-on-centos/
 
