--- a/A00309828.md
+++ b/A00309828.md
@@ -1,6 +1,6 @@
 Emmanuel Bolaños Ocampo, A00309828
 
-***Seleccione 5 retos de la página https://cmdchallenge.com y presente la solución a cada uno de ellos a través de un ejemplo práctico en CentOS7. Presente capturas de pantalla relevantes como evidencias de lo realizado.
+***Seleccione 5 retos de la página https://cmdchallenge.com y presente la solución a cada uno de ellos a través de un ejemplo práctico en CentOS7. Presente capturas de pantalla relevantes como evidencias de lo realizado.***
 
 Reto 1) Imprimir en la consola.
 
