--- a/A00309828.md
+++ b/A00309828.md
@@ -24,7 +24,7 @@ Reto 5) Imprimir las últimas  líneas del archivo.
 ![image](https://cloud.githubusercontent.com/assets/17281732/23809484/e16b67c6-059b-11e7-8e75-3067d5dc3475.png)
  
 ***Realice un script que a partir de un listado con no menos de dos direcciones ip, descargue en forma remota un libro del
-proyecto https://www.gutenberg.org/ en el directorio /tmp de cada equipo. El usuario operativos con contraseñas operativos debe existir en las equipos. Presente capturas de pantalla relevantes como evidencias del funcionamiento.
+proyecto https://www.gutenberg.org/ en el directorio /tmp de cada equipo. El usuario operativos con contraseñas operativos debe existir en las equipos. Presente capturas de pantalla relevantes como evidencias del funcionamiento.***
 
 ![image](https://cloud.githubusercontent.com/assets/17281732/23810103/31381a4a-059e-11e7-93dc-4f10edd39710.png)
 
@@ -42,7 +42,7 @@ Capturas asociadas al contenido del libro descargado.
 ![2](https://cloud.githubusercontent.com/assets/17281732/23817128/ca43cb60-05be-11e7-8957-4c2aa4f8a450.jpg)
   
 
-***Cree un contenedor de debían en CentOS7 empleando LXC. Presente el listado de los comandos empleados y capturas de pantalla relevantes como evidencias del funcionamiento.
+***Cree un contenedor de debían en CentOS7 empleando LXC. Presente el listado de los comandos empleados y capturas de pantalla relevantes como evidencias del funcionamiento.***
 
 Captura asociada a la descarga de las dependencias necesarias y la comprobación del estado requerido-> activo.
 
@@ -61,5 +61,5 @@ Captura asociada a la activación del contenedor debían, me faltó tomarle capt
 ![image](https://cloud.githubusercontent.com/assets/17281732/23810403/87c21266-059f-11e7-8ee6-d7b625085466.png)
 
 ***Bibliografía. https://cmdchallenge.com/#/last_lines
-http://www.tecmint.com/install-create-run-lxc-linux-containers-on-centos/
+http://www.tecmint.com/install-create-run-lxc-linux-containers-on-centos/***
 
